# MasterControl

./: .gitignore
mascon/: LICENSE  README.ja.md  README.md  pyproject.toml
mascon/.github/workflows/: ci.yml
mascon/mastercontrol/: ai.py  cli.py  config.py  services.py
mascon/mastercontrol.egg-info/: SOURCES.txt  top_level.txt
mascon/tests/: test_ai.py  test_cli.py  test_config_and_services.py
