[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mastercontrol"
description = "Mascon / Master Control - personal CLI console for WSL"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "APIron Lab" }]
dependencies = []
dynamic = ["version"]

[project.scripts]
mascon = "mastercontrol.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.dynamic]
version = { attr = "mastercontrol.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["mastercontrol*"]
